# freetalking-bot

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_dev.sh  run_prod.sh
.streamlit/: config.toml
config/: personas.json  settings.json
src/: vocabulary_analyzer.py
