[project]
name = "japanese-conversation-bot"
version = "1.0.0"
description = "일본어 회화 학습 AI - OpenAI Realtime Voice API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "streamlit>=1.40.2",
    "openai>=1.57.4",
    "websocket-client>=1.8.0",
    "websockets>=14.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "pyaudio>=0.2.14",
    "streamlit-webrtc>=0.47.10",
    "aiortc>=1.9.0",
    "av>=13.1.0",
    "aiofiles>=24.1.0",
    "japanize-matplotlib>=1.1.3",
    "fugashi>=1.4.0",
    "unidic-lite>=1.0.8",
    "pykakasi>=2.3.0",
    "romkan>=0.2.1",
    "mecab-python3>=1.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "ruff>=0.8.6",
    "ipython>=8.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]